@@ -1,6 +1,7 @@
 CHANGELOG Roundcube Webmail
 ===========================
 
+- Fix keybord events on messages list in opera browser (#1488823)
 - Fix selection of collapsed thread rows (#1488772)
 - Always save drafts with format=flowed in order to keep original line wraps (#1488799)
 - Fix wrapping of quoted text with format=flowed (#1488177)
